# l3pilot-cdf

./: CHANGELOG.md  LICENSE  README.md  format.md
code/c_plusplus/: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
code/c_plusplus/doc/: CMakeLists.txt  doxygenConfig.in
code/c_plusplus/include/: structure_definitions.h
code/c_plusplus/src/: CMakeLists.txt
code/c_plusplus/src/reading/: CMakeLists.txt  read_example.cpp  read_example.hpp
code/c_plusplus/src/writing/: CMakeLists.txt  generate_example.cpp  generate_example.hpp  hdf5_data_buffer.cpp  hdf5_data_buffer.hpp
code/matlab/: .gitignore  CONTRIBUTING.md  README.md  cleanup_structure.m  generate_example.m  h5WriteAttributeArray.m  h5writeattfile.m  read_example.m  structure_definitions.m
code/python/: .gitignore  CONTRIBUTING.md  README.md  generate_example.py  read_example.py  requirements.txt  structure_definitions.py
examples/: l3pilot_cdf_filled_example_v0.8.h5
tools/L3Q/: .classpath  .project  l3q.bat  readme.txt
tools/L3Q/config/: l3q.properties  report-template-f.html
tools/L3Q/logs/: l3pilot_cdf_filled_example.h5
tools/L3Q/reports/: l3q-l3pilot_cdf_filled_example.h5.html
tools/L3Q/src/hdf/object/: Attribute.java  Dataset.java  Datatype.java
tools/L3Q/src/hdf/object/h5/: H5Group.java  H5Link.java  H5ScalarDS.java
tools/L3Q/src/l3q/: Chart.java  Config.java  Data.java  H5CompoundDS.java  H5Datatype.java  H5File.java  HDF5Read.java  HtmlReader.java  Indicators.java  L3Q.java  ObjectPosition.java  Utilities.java
